<resources>
    <string name="app_name">cardiac</string>
    <string name="dep">From 0 to 3 months</string>
    <string name="abc">From 3 to 6 months</string>
    <string name="ab">From 6 to 9 months</string>
    <string name="a">From 9 to 12 months</string>
    <string name="sa">From 12 to 18 months</string>
    <string name="saa">From 12 to 18 months</string>
    <string name="asa">From 18 to 24 months</string>
    <string name="all">From 2 to 3 years</string>
    <string name="ala">From 3 to 4 years</string>
    <string name="ra">From 4 to 6 years</string>
    <string name="raa">From 6 to 8 years</string>
    <string name="raw">Next</string>
    <string name="rwa">Age</string>
    <string name="ha">More than 65 </string>
    <string name="has">Others</string>
    <string name="fa">heart diseases</string>
    <string name="fat">Anemia </string>
    <string name="tam">Cardiomyopathy</string>
    <string name="tta">Hyper thyroidism</string>
    <string name="tat">Valvular heart disease</string>
    <string name="tla">Coronary artery disease </string>
    <string name="ggg">Diabetes</string>
    <string name="hhh">Next</string>
    <string name="jk">Which disease you have?</string>
    <string name="vv">Running</string>
    <string name="ddd">Relaxing</string>
    <string name="sfg">Anexeity</string>
    <string name="cvf">Breathing hardly</string>
    <string name="sdf">Doing nothing</string>
    <string name="dsg">Next</string>
    <string name="nf">Athlete</string>
    <string name="kkk">What are you doing now ?</string>
    <string name="kjf">Are You Smoker ?</string>
    <string name="sd">Yes</string>
    <string name="df">No</string>
    <string name="jhe">From 56 to 65 years</string>
    <string name="fjd">From 46 to 55 years</string>
    <string name="gjk">From 36 to 45 years </string>
    <string name="sdg">From 26 to 35 years </string>
    <string name="asd">From 18 to 25 years </string>
    <string name="dfg">From 15 to 18 years </string>
    <string name="hjk">From 12 to 15 years </string>
    <string name="odl">From 8 to 12 years </string>
    <string name="ole">Anxeity</string>
    <string name="dj">Gender</string>
    <string name="ll">No disease</string>

    <string name="agk">•	Let the baby sleep in a suitable environment which provides him with the sense of relaxation.</string>
    <string name="fv">•	Feeding the baby well.</string>
    <string name="dsk">•	For the mother, you should take care of the protein and calcium percentage in your body.</string>
    <string name="gen">•	The parents shouldn’t drink drugs OR smoke.</string>
    <string name="gdc">•	Keep the baby away from smoke or polluted air.</string>
    <string name="dsj">•	Ask the doctor continuously if all body systems are working well or not.</string>
    <string name="gender">gender</string>

</resources>


